fix textarea 2px jump on is-full

--- a/src/scss/src/components/_form.scss
+++ b/src/scss/src/components/_form.scss
@@ -220,6 +220,10 @@
   }
 
   .form__textarea {
+    
+    &.is-full, &.has-placeholder {
+      padding: ($spacing-base + 2px) ($spacing-base / 2) ($spacing-base / 2);
+    }
     height: auto;
   }
 }
